force-app/main/default/objects/Voo__c/Voo__c.object-meta.xml
<CustomObject>
    <description>O Voo de uma aeronave, do ponto de origem até o retorno</description>
    <label>Voo</label>
    <nameField>
        <displayFormat>REVO-{00000000}</displayFormat>
        <label>Número do Voo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>