force-app/main/default/objects/Voo__c/fields/AlertaComercialVerificarTrocaTurma__c.field-meta.xml
<CustomField>
    <fullName>AlertaComercialVerificarTrocaTurma__c</fullName>
    <description>Campo setado com a data/hora de informar ao Comercial que alguma prazo antes ele tem que verificar um voo de sísmica com troca de turma</description>
    <label>Alerta comercial verificar troca turma</label>
    <type>DateTime</type>
</CustomField>