force-app/main/default/objects/Voo__c/fields/AlertaNovaCargaVoo__c.field-meta.xml
<CustomField>
    <fullName>AlertaNovaCargaVoo__c</fullName>
    <label>Alerta Nova Carga de Voo</label>
    <type>DateTime</type>
</CustomField>