force-app/main/default/objects/Voo__c/fields/AnexarDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>AnexarDocumentacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check marcado pela coordenação ao anexar documentação do voo</description>
    <inlineHelpText>Marcar após anexar os documentos necessários</inlineHelpText>
    <label>Documentação Anexada</label>
    <type>Checkbox</type>
</CustomField>