force-app/main/default/objects/Voo__c/fields/APPPassageirosNotificado__c.field-meta.xml
<CustomField>
    <fullName>APPPassageirosNotificado__c</fullName>
    <description>Utilizado pelo atendimento. Envio de notificação Push para passageiros</description>
    <label>Passageiros comunicados</label>
    <type>DateTime</type>
</CustomField>