force-app/main/default/objects/Voo__c/fields/AprovacaoDiaVoo__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoDiaVoo__c</fullName>
    <label>Aprovação do Dia do Voo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusAprovacao</valueSetName>
    </valueSet>
</CustomField>