force-app/main/default/objects/Voo__c/fields/AprovacaoOperacoes__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoOperacoes__c</fullName>
    <label>Aprovação Operações</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusAprovacao</valueSetName>
    </valueSet>
</CustomField>