force-app/main/default/objects/Voo__c/fields/AprovacaoPrefixo__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoPrefixo__c</fullName>
    <defaultValue>&quot;Pendente&quot;</defaultValue>
    <label>Aprovação Prefixo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusAprovacao</valueSetName>
    </valueSet>
</CustomField>