force-app/main/default/objects/Voo__c/fields/AprovacaoTripulacao__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoTripulacao__c</fullName>
    <defaultValue>&quot;Pendente&quot;</defaultValue>
    <label>Aprovação Tripulação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusAprovacao</valueSetName>
    </valueSet>
</CustomField>