force-app/main/default/objects/Voo__c/fields/AtrasoInicial__c.field-meta.xml
<CustomField>
    <fullName>AtrasoInicial__c</fullName>
    <label>Atraso do Primeiro Trecho</label>
    <summarizedField>Trecho__c.Atraso__c</summarizedField>
    <summaryFilterItems>
        <field>Trecho__c.PrimeiroTrechoFixo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>