force-app/main/default/objects/Voo__c/fields/AtrasoTotalMinutos__c.field-meta.xml
<CustomField>
    <fullName>AtrasoTotalMinutos__c</fullName>
    <label>Atraso total em minutos</label>
    <summarizedField>Trecho__c.Atraso__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>