force-app/main/default/objects/Voo__c/fields/BaixaOcupacao__c.field-meta.xml
<CustomField>
    <fullName>BaixaOcupacao__c</fullName>
    <description>Voos especiais que tiveram como ocupação uma quantidade menor que o Pax mínimo.</description>
    <formula>IF(OR(AND(ISPICKVAL(Status__c, &quot;Executado&quot;),  ContadorPassageiros__c &lt;  PAD__r.MinimoPax__c * 2, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;)), 
						AND(ISPICKVAL(Status__c, &quot;Executado&quot; ),  ContadorPassageiros__c = NULL, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;)),
						AND(ISPICKVAL(Status__c, &quot;Em Faturamento&quot;),  ContadorPassageiros__c &lt;  PAD__r.MinimoPax__c * 2, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;)), 
						AND(ISPICKVAL(Status__c, &quot;Em Faturamento&quot; ),  ContadorPassageiros__c = NULL, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;)),
						AND(ISPICKVAL(Status__c, &quot;Faturado&quot;),  ContadorPassageiros__c &lt;  PAD__r.MinimoPax__c * 2, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;)), 
						AND(ISPICKVAL(Status__c, &quot;Faturado&quot; ),  ContadorPassageiros__c = NULL, ISPICKVAL(TipoPAD__c, &apos;Especial&apos;))),
			true, false)</formula>
    <inlineHelpText>Voos especiais que tiveram como ocupação uma quantidade menor que o Pax mínimo.</inlineHelpText>
    <label>Baixa Ocupação</label>
    <type>Checkbox</type>
</CustomField>