force-app/main/default/objects/Voo__c/fields/BaseOperacional__c.field-meta.xml
<CustomField>
    <fullName>BaseOperacional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Operacional</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Base Operacional)</relationshipLabel>
    <relationshipName>BaseOperacional</relationshipName>
    <type>Lookup</type>
</CustomField>