force-app/main/default/objects/Voo__c/fields/BaseResponsavelLog__c.field-meta.xml
<CustomField>
    <fullName>BaseResponsavelLog__c</fullName>
    <description>Base Responsável por Log de voo concluído a ser passado para o piloto.</description>
    <inlineHelpText>Base Responsável por Log de voo concluído a ser passado para o piloto.</inlineHelpText>
    <label>Base responsável por log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBME</fullName>
            </value>
            <value>
                <fullName>SBJR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>