force-app/main/default/objects/Voo__c/fields/BypassAprovacao__c.field-meta.xml
<CustomField>
    <fullName>BypassAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAprovacao</label>
    <type>Checkbox</type>
</CustomField>