force-app/main/default/objects/Voo__c/fields/CampoPesquisa__c.field-meta.xml
<CustomField>
    <fullName>CampoPesquisa__c</fullName>
    <description>Campo para ajudar nas pesquisas de tela</description>
    <label>Campo Pesquisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>