force-app/main/default/objects/Voo__c/fields/CategoriaAtraso__c.field-meta.xml
<CustomField>
    <fullName>CategoriaAtraso__c</fullName>
    <label>Categoria de Atraso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IATA</fullName>
            </value>
            <value>
                <fullName>Petrobras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>