force-app/main/default/objects/Voo__c/fields/ChaveCalculoMissao__c.field-meta.xml
<CustomField>
    <fullName>ChaveCalculoMissao__c</fullName>
    <description>Prefixo da Aeronave + Rota do Voo</description>
    <label>Chave Cálculo de Missão</label>
    <type>TextArea</type>
</CustomField>