force-app/main/default/objects/Voo__c/fields/ChaveRota__c.field-meta.xml
<CustomField>
    <fullName>ChaveRota__c</fullName>
    <description>Códigos dos locais da rota concatenados para verificação de alteração da rota</description>
    <label>Chave da Rota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>