force-app/main/default/objects/Voo__c/fields/ChaveTripulacao__c.field-meta.xml
<CustomField>
    <fullName>ChaveTripulacao__c</fullName>
    <label>ChaveTripulacao</label>
    <length>100</length>
    <type>Text</type>
</CustomField>