force-app/main/default/objects/Voo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta para o faturamento do(s) voo(s)</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>