force-app/main/default/objects/Voo__c/fields/Clonado__c.field-meta.xml
<CustomField>
    <fullName>Clonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clonado</label>
    <type>Checkbox</type>
</CustomField>