force-app/main/default/objects/Voo__c/fields/CodigoVooCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoVooCliente__c</fullName>
    <label>Código Voo Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>