force-app/main/default/objects/Voo__c/fields/Comandante__c.field-meta.xml
<CustomField>
    <fullName>Comandante__c</fullName>
    <description>Comandante responsável pelo voo</description>
    <inlineHelpText>Comandante responsável pelo voo</inlineHelpText>
    <label>Comandante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>