force-app/main/default/objects/Voo__c/fields/Comissario__c.field-meta.xml
<CustomField>
    <fullName>Comissario__c</fullName>
    <description>Comissário alocado para o voo</description>
    <inlineHelpText>Comissário alocado para o voo</inlineHelpText>
    <label>Comissário</label>
    <length>50</length>
    <type>Text</type>
</CustomField>