force-app/main/default/objects/Voo__c/fields/ConclusaoInformada__c.field-meta.xml
<CustomField>
    <fullName>ConclusaoInformada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que marca se o interessado na conclusão do voo já foi enviado</description>
    <label>Conclusão Informada</label>
    <type>Checkbox</type>
</CustomField>