force-app/main/default/objects/Voo__c/fields/Confirmacao__c.field-meta.xml
<CustomField>
    <fullName>Confirmacao__c</fullName>
    <description>Campo para texto da action Revalidar aprovação</description>
    <formula>$Label.RevalidarAprovacoes</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmação</label>
    <type>Text</type>
</CustomField>