force-app/main/default/objects/Voo__c/fields/Consumo__c.field-meta.xml
<CustomField>
    <fullName>Consumo__c</fullName>
    <label>Consumo</label>
    <summarizedField>Trecho__c.Consumo__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>