force-app/main/default/objects/Voo__c/fields/ContadorCargas__c.field-meta.xml
<CustomField>
    <fullName>ContadorCargas__c</fullName>
    <description>Contador de Cargas do Voo</description>
    <inlineHelpText>Contador de Cargas do Voo</inlineHelpText>
    <label>Contador Cargas</label>
    <summarizedField>Trecho__c.QuantidadeCargas__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>