force-app/main/default/objects/Voo__c/fields/ContadorDados__c.field-meta.xml
<CustomField>
    <fullName>ContadorDados__c</fullName>
    <description>Contador de Dados inclusos nos trechos (passageiros ou cargas)</description>
    <inlineHelpText>Contador de Dados inclusos nos trechos (passageiros ou cargas)</inlineHelpText>
    <label>ContadorDados</label>
    <summaryFilterItems>
        <field>Trecho__c.QuantidadeCargas__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Trecho__c.QuantidadePassageiros__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>