force-app/main/default/objects/Voo__c/fields/ContadorPassageiros__c.field-meta.xml
<CustomField>
    <fullName>ContadorPassageiros__c</fullName>
    <description>Contador de Passageiro no Voo</description>
    <inlineHelpText>Contador de Passageiro no Voo</inlineHelpText>
    <label>Contador Passageiros</label>
    <summarizedField>Trecho__c.QtdPassageiros__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>