force-app/main/default/objects/Voo__c/fields/CoordenadasValidadas__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasValidadas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado no Flow para passar para um nova etapa</description>
    <label>Coordenadas Validadas</label>
    <type>Checkbox</type>
</CustomField>