force-app/main/default/objects/Voo__c/fields/Copiloto__c.field-meta.xml
<CustomField>
    <fullName>Copiloto__c</fullName>
    <description>Copiloto responsável pelo voo</description>
    <inlineHelpText>Copiloto responsável pelo voo</inlineHelpText>
    <label>Copiloto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>