force-app/main/default/objects/Voo__c/fields/CorteBordo__c.field-meta.xml
<CustomField>
    <fullName>CorteBordo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Há corte a bordo no voo?</description>
    <inlineHelpText>Há corte a bordo no voo?</inlineHelpText>
    <label>Corte a bordo</label>
    <type>Checkbox</type>
</CustomField>