force-app/main/default/objects/Voo__c/fields/CotacaoDolar__c.field-meta.xml
<CustomField>
    <fullName>CotacaoDolar__c</fullName>
    <description>Cotação do Dólar na data do voo</description>
    <inlineHelpText>Cotação do Dólar na data do voo</inlineHelpText>
    <label>Cotação Dólar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>