force-app/main/default/objects/Voo__c/fields/CriadoPorLead__c.field-meta.xml
<CustomField>
    <fullName>CriadoPorLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Voo foi criado a partir do processo de conversão do Lead</description>
    <inlineHelpText>Voo foi criado a partir do processo de conversão do Lead</inlineHelpText>
    <label>Criado por Lead</label>
    <type>Checkbox</type>
</CustomField>