force-app/main/default/objects/Voo__c/fields/DadosInconsistentesSigtrip__c.field-meta.xml
<CustomField>
    <fullName>DadosInconsistentesSigtrip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo tem por objetivo marcar os vôos com inconsistências no número de trechos entre vôo Omni e vôo Sigtrip antes de efetuar as conciliações.</description>
    <inlineHelpText>Este campo tem por objetivo marcar os vôos com inconsistências no número de trechos entre vôo Omni e vôo Sigtrip antes de efetuar as conciliações.</inlineHelpText>
    <label>Dados Inconsistentes Sigtrip</label>
    <type>Checkbox</type>
</CustomField>