force-app/main/default/objects/Voo__c/fields/DataEsperadaFimVoo__c.field-meta.xml
<CustomField>
    <fullName>DataEsperadaFimVoo__c</fullName>
    <description>Data/Hora esperada de término do voo.
Data solicitada pelo cliente somado ao tempo total da missão, subtraindo-se o translado de ida</description>
    <formula>DataVoo__c + (Missao__r.TempoMissao__c/1440) - (Missao__r.TempoTransladoIda__c)/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data/Hora esperada de término do voo.
Data solicitada pelo cliente somado ao tempo total da missão, subtraindo-se o translado de ida</inlineHelpText>
    <label>Data esperada de fim do voo</label>
    <type>DateTime</type>
</CustomField>