force-app/main/default/objects/Voo__c/fields/DataFimRastreamentoVoo__c.field-meta.xml
<CustomField>
    <fullName>DataFimRastreamentoVoo__c</fullName>
    <formula>DataEsperadaFimVoo__c + AtrasoTotalMinutos__c/1440 + ($Setup.ConfiguracaoTempo__c.TempoIntegracaoSkytrac__c/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Fim Rastreamento Voo</label>
    <type>DateTime</type>
</CustomField>