force-app/main/default/objects/Voo__c/fields/DataHoraVoo__c.field-meta.xml
<CustomField>
    <fullName>DataHoraVoo__c</fullName>
    <formula>DATETIMEVALUE(TEXT(YEAR(DATEVALUE(DataVoo__c)))+&apos;-&apos;+TEXT(MONTH(DATEVALUE(DataVoo__c)))+&apos;-&apos;+TEXT(DAY(DATEVALUE(DataVoo__c))) +&apos; &apos;+ TEXT(HOUR(TIMEVALUE(DataVoo__c)))+&apos;:&apos;+TEXT(MINUTE(TIMEVALUE(DataVoo__c)))+&apos;:00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data e Hora do Voo</label>
    <type>DateTime</type>
</CustomField>