force-app/main/default/objects/Voo__c/fields/DataInicioRastreamentoVoo__c.field-meta.xml
<CustomField>
    <fullName>DataInicioRastreamentoVoo__c</fullName>
    <formula>DataRealInicio__c - ($Setup.ConfiguracaoTempo__c.TempoIntegracaoSkytrac__c/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Início Rastreamento Voo</label>
    <type>DateTime</type>
</CustomField>