force-app/main/default/objects/Voo__c/fields/DataRealInicio__c.field-meta.xml
<CustomField>
    <fullName>DataRealInicio__c</fullName>
    <description>Data realista de início do voo, considerando entrevoos e translado de ida.</description>
    <formula>DataVoo__c - (Missao__r.TempoTransladoIda__c/1440) - (
        CASE(Tipo__c,
            &apos;Charter&apos;, $Setup.ConfiguracaoTempo__c.EntreVoosCharterPre__c,
            &apos;FullCabin&apos;, $Setup.ConfiguracaoTempo__c.EntreVoosFullCabinPre__c,
            $Setup.ConfiguracaoTempo__c.TempoPlanejamentoPre__c
        )
    )/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data realista de início do voo, considerando entrevoos e translado de ida.</inlineHelpText>
    <label>Data Real Início</label>
    <type>DateTime</type>
</CustomField>