force-app/main/default/objects/Voo__c/fields/DataRemocaoPreReserva__c.field-meta.xml
<CustomField>
    <fullName>DataRemocaoPreReserva__c</fullName>
    <description>Data para disparo da ação agendada que retorna um voo do status pré-reserva para rascunho considerando configuração personalizada de tempo e 1 hora adicional para agendar no process builder</description>
    <inlineHelpText>Data para disparo da ação agendada que retorna um voo do status pré-reserva para rascunho</inlineHelpText>
    <label>Data de remoção da pré-reserva</label>
    <type>DateTime</type>
</CustomField>