force-app/main/default/objects/Voo__c/fields/DataResetPreReserva__c.field-meta.xml
<CustomField>
    <fullName>DataResetPreReserva__c</fullName>
    <description>Data auxiliar para PB que agenda exclusão do voo, agenda o campo reset retornando a false</description>
    <inlineHelpText>Data auxiliar para PB que agenda exclusão do voo, agenda o campo reset retornando a false</inlineHelpText>
    <label>Data de reset pré-reserva</label>
    <type>DateTime</type>
</CustomField>