force-app/main/default/objects/Voo__c/fields/DataTexto__c.field-meta.xml
<CustomField>
    <fullName>DataTexto__c</fullName>
    <description>Campo texto para data do voo</description>
    <formula>TEXT(DAY( DATEVALUE(DataVoo__c ))) &amp; &apos;/&apos; &amp;
TEXT(MONTH( DATEVALUE(DataVoo__c ))) &amp; &apos;/&apos; &amp;
TEXT(YEAR( DATEVALUE(DataVoo__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DataTexto</label>
    <type>Text</type>
</CustomField>