force-app/main/default/objects/Voo__c/fields/DataVoo__c.field-meta.xml
<CustomField>
    <fullName>DataVoo__c</fullName>
    <description>Dia e hora solicitada para a realização do voo</description>
    <inlineHelpText>Dia e hora solicitada para a realização do voo</inlineHelpText>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>