force-app/main/default/objects/Voo__c/fields/DataVooOriginal__c.field-meta.xml
<CustomField>
    <fullName>DataVooOriginal__c</fullName>
    <label>Data Voo Original</label>
    <type>DateTime</type>
</CustomField>