force-app/main/default/objects/Voo__c/fields/Decolagem__c.field-meta.xml
<CustomField>
    <fullName>Decolagem__c</fullName>
    <description>Hora de decolagem da aeronave</description>
    <inlineHelpText>Hora de decolagem da aeronave</inlineHelpText>
    <label>Decolagem</label>
    <type>Time</type>
</CustomField>