force-app/main/default/objects/Voo__c/fields/DescricaoIndisponibilidade__c.field-meta.xml
<CustomField>
    <fullName>DescricaoIndisponibilidade__c</fullName>
    <description>Observações preenchidas pela equipe da coordenação sobre o voo não possuir aeronave disponível para ser definida</description>
    <inlineHelpText>Observações preenchidas pela equipe da coordenação sobre o voo não possuir aeronave disponível para ser definida</inlineHelpText>
    <label>Descrição de Indisponibilidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>