force-app/main/default/objects/Voo__c/fields/DescricaoIndisponibilidadeCalculo__c.field-meta.xml
<CustomField>
    <fullName>DescricaoIndisponibilidadeCalculo__c</fullName>
    <label>Descrição da Indisponibilidade Cálculo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>