force-app/main/default/objects/Voo__c/fields/DescricaoIndisponibilidadeTripulacao__c.field-meta.xml
<CustomField>
    <fullName>DescricaoIndisponibilidadeTripulacao__c</fullName>
    <label>Descrição da Indisponibilidade Tripulaçã</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>