force-app/main/default/objects/Voo__c/fields/DestinoLead10__c.field-meta.xml
<CustomField>
    <fullName>DestinoLead10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Espelha campo destino do lead, que possui um local</description>
    <inlineHelpText>Espelha campo destino do lead, que possui um local</inlineHelpText>
    <label>Destino Lead 10</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Destino Lead 10)</relationshipLabel>
    <relationshipName>VoosDestino10</relationshipName>
    <type>Lookup</type>
</CustomField>