force-app/main/default/objects/Voo__c/fields/DestinoLead2__c.field-meta.xml
<CustomField>
    <fullName>DestinoLead2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Espelha campo destino do lead, que possui um local</description>
    <inlineHelpText>Espelha campo destino do lead, que possui um local</inlineHelpText>
    <label>Destino Lead 2</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Destino Lead 2)</relationshipLabel>
    <relationshipName>VoosDestino2</relationshipName>
    <type>Lookup</type>
</CustomField>