force-app/main/default/objects/Voo__c/fields/DestinoLead3__c.field-meta.xml
<CustomField>
    <fullName>DestinoLead3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Espelha campo destino do lead, que possui um local</description>
    <inlineHelpText>Espelha campo destino do lead, que possui um local</inlineHelpText>
    <label>Destino Lead 3</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Destino Lead 3)</relationshipLabel>
    <relationshipName>VoosDestino3</relationshipName>
    <type>Lookup</type>
</CustomField>