force-app/main/default/objects/Voo__c/fields/DiaVoo__c.field-meta.xml
<CustomField>
    <fullName>DiaVoo__c</fullName>
    <description>Retorna o dia da data do voo</description>
    <formula>DATEVALUE(DataVoo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retorna o dia da data do voo</inlineHelpText>
    <label>Dia do Voo</label>
    <type>Date</type>
</CustomField>