force-app/main/default/objects/Voo__c/fields/Duracao__c.field-meta.xml
<CustomField>
    <fullName>Duracao__c</fullName>
    <label>Duração</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>