force-app/main/default/objects/Voo__c/fields/EmbarqueIniciado__c.field-meta.xml
<CustomField>
    <fullName>EmbarqueIniciado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check marca a inclusão do primeiro passageiro no voo, abrindo o processo de check in e notificando o interessado no embarque</description>
    <label>Embarque Iniciado</label>
    <type>Checkbox</type>
</CustomField>