force-app/main/default/objects/Voo__c/fields/EnviouLogsVoo__c.field-meta.xml
<CustomField>
    <fullName>EnviouLogsVoo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado caso tenha sido enviado os logs do voo por e-mail</description>
    <inlineHelpText>Marcado caso tenha sido enviado os logs do voo por e-mail</inlineHelpText>
    <label>Enviou logs do voo</label>
    <type>Checkbox</type>
</CustomField>