force-app/main/default/objects/Voo__c/fields/FaturamentoInformado__c.field-meta.xml
<CustomField>
    <fullName>FaturamentoInformado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo marca se o voo já teve Interessados em seu faturamento informados</description>
    <label>Faturamento Informado</label>
    <type>Checkbox</type>
</CustomField>