force-app/main/default/objects/Voo__c/fields/fltPlan__c.field-meta.xml
<CustomField>
    <fullName>fltPlan__c</fullName>
    <label>fltPlan</label>
    <type>DateTime</type>
</CustomField>