force-app/main/default/objects/Voo__c/fields/HorarioVooReservado2__c.field-meta.xml
<CustomField>
    <fullName>HorarioVooReservado2__c</fullName>
    <label>Horário Voo Reservado 2</label>
    <type>DateTime</type>
</CustomField>