force-app/main/default/objects/Voo__c/fields/HorarioVooReservado3__c.field-meta.xml
<CustomField>
    <fullName>HorarioVooReservado3__c</fullName>
    <formula>DATETIMEVALUE(HorarioVooReservado__c)</formula>
    <label>Horário Voo Reservado 3</label>
    <type>DateTime</type>
</CustomField>