force-app/main/default/objects/Voo__c/fields/HorarioVooReservado__c.field-meta.xml
<CustomField>
    <fullName>HorarioVooReservado__c</fullName>
    <description>Horário em que o voo foi reservado, serve para direcionar equipes de aprovação</description>
    <inlineHelpText>Horário em que o voo foi reservado</inlineHelpText>
    <label>Horário Voo Reservado</label>
    <type>DateTime</type>
</CustomField>