force-app/main/default/objects/Voo__c/fields/IdCarga__c.field-meta.xml
<CustomField>
    <fullName>IdCarga__c</fullName>
    <description>Indica o Id da carga de voo.</description>
    <inlineHelpText>Indica o Id da carga de voo.</inlineHelpText>
    <label>Id da Carga</label>
    <length>36</length>
    <type>Text</type>
</CustomField>