force-app/main/default/objects/Voo__c/fields/IdContaPai__c.field-meta.xml
<CustomField>
    <fullName>IdContaPai__c</fullName>
    <description>Id da conta pai da pedida para o voo</description>
    <inlineHelpText>Id da conta pai da pedida para o voo</inlineHelpText>
    <label>Id da conta pai</label>
    <length>20</length>
    <type>Text</type>
</CustomField>