force-app/main/default/objects/Voo__c/fields/IdentificadorExterno__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorExterno__c</fullName>
    <description>Número ou código externo ao salesforce que identifica o voo</description>
    <externalId>true</externalId>
    <inlineHelpText>Número ou código externo ao salesforce que identifica o voo</inlineHelpText>
    <label>Identificador externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>