force-app/main/default/objects/Voo__c/fields/IdExternoVPP__c.field-meta.xml
<CustomField>
    <fullName>IdExternoVPP__c</fullName>
    <label>Id Externo VPP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>