force-app/main/default/objects/Voo__c/fields/IgnorarTrigger__c.field-meta.xml
<CustomField>
    <fullName>IgnorarTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso marcado voo não será utilizado na trigger</description>
    <inlineHelpText>Caso marcado voo não será utilizado na trigger</inlineHelpText>
    <label>Ignorar trigger</label>
    <type>Checkbox</type>
</CustomField>