force-app/main/default/objects/Voo__c/fields/IgnorarValidacaoTempo__c.field-meta.xml
<CustomField>
    <fullName>IgnorarValidacaoTempo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignora validação de tempo que impede atualizar a data do voo quando não há determinado tempo prévio</description>
    <inlineHelpText>Ignora validação de tempo que impede atualizar a data do voo quando não há determinado tempo prévio</inlineHelpText>
    <label>Ignorar validação tempo</label>
    <type>Checkbox</type>
</CustomField>