force-app/main/default/objects/Voo__c/fields/LeadGerouVoo__c.field-meta.xml
<CustomField>
    <fullName>LeadGerouVoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead que gerou o voo com a conversão</description>
    <inlineHelpText>Lead que gerou o voo com a conversão</inlineHelpText>
    <label>Lead que gerou o voo</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>