force-app/main/default/objects/Voo__c/fields/LinkRegistro__c.field-meta.xml
<CustomField>
    <fullName>LinkRegistro__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <label>Link para Registro</label>
    <type>Text</type>
</CustomField>