force-app/main/default/objects/Voo__c/fields/LogRadioEnviadoOOS__c.field-meta.xml
<CustomField>
    <fullName>LogRadioEnviadoOOS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado quando as informações de Log de Radio foram enviadas para o OOS.
Informações: &quot; &apos;Data do envio da Informação&apos; , &apos;VoeOmni&apos;, &apos;Data do Acionamento&apos;, &apos;Datahora da Decolagem&apos;</description>
    <label>Log de Radio Enviado OOS</label>
    <type>Checkbox</type>
</CustomField>