force-app/main/default/objects/Voo__c/fields/Manutencao__c.field-meta.xml
<CustomField>
    <fullName>Manutencao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica se o voo é para manutenção da aeronave</description>
    <inlineHelpText>Flag que indica se o voo é para manutenção da aeronave</inlineHelpText>
    <label>Manutenção</label>
    <type>Checkbox</type>
</CustomField>