force-app/main/default/objects/Voo__c/fields/Mecanico__c.field-meta.xml
<CustomField>
    <fullName>Mecanico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mecânico</label>
    <referenceTo>Funcionario__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>