force-app/main/default/objects/Voo__c/fields/MEDVAC__c.field-meta.xml
<CustomField>
    <fullName>MEDVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o voo é MEDVAC</description>
    <inlineHelpText>Indica se o voo é MEDVAC</inlineHelpText>
    <label>MEDVAC</label>
    <type>Checkbox</type>
</CustomField>