force-app/main/default/objects/Voo__c/fields/MensagemCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MensagemCancelamento__c</fullName>
    <formula>&quot;Clique em salvar para cancelar seu voo.&quot;</formula>
    <label>Tem certeza?</label>
    <type>Text</type>
</CustomField>