force-app/main/default/objects/Voo__c/fields/MesDoVoo__c.field-meta.xml
<CustomField>
    <fullName>MesDoVoo__c</fullName>
    <description>Retorna o mês do voo</description>
    <formula>MONTH(DATEVALUE(DataVoo__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retorna o mês do voo</inlineHelpText>
    <label>Mês do voo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>