force-app/main/default/objects/Voo__c/fields/Missao__c.field-meta.xml
<CustomField>
    <fullName>Missao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contém dados de cálculo de missão de um voo</description>
    <label>Missão</label>
    <referenceTo>Missao__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>