force-app/main/default/objects/Voo__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Modelo da aeronave que realizará o voo</description>
    <formula>Prefixo__r.ModeloAeronave__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modelo da aeronave que realizará o voo</inlineHelpText>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>