force-app/main/default/objects/Voo__c/fields/MotivoAbandono__c.field-meta.xml
<CustomField>
    <fullName>MotivoAbandono__c</fullName>
    <label>Motivo do Abandono</label>
    <type>TextArea</type>
</CustomField>