force-app/main/default/objects/Voo__c/fields/MotivoAtraso__c.field-meta.xml
<CustomField>
    <fullName>MotivoAtraso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motivo do Atraso</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MotivoAtraso__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.CategoriaAtraso__c</field>
            <operation>equals</operation>
            <valueField>MotivoAtraso__c.Categoria__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MotivoAtraso__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>