force-app/main/default/objects/Voo__c/fields/MotivoAtrasoTexto__c.field-meta.xml
<CustomField>
    <fullName>MotivoAtrasoTexto__c</fullName>
    <label>Comentário do Atraso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>